@@ -1,1 +1,2 @@
 <*.cmx>: for-pack(Batteries)
+<batteries.ml>: pkg_threads
